--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Avail Team"]
 
 [dependencies]
 anyhow = "1.0.71"
-clap = { version = "4.2.7", features = ["derive"] }
+clap = { version = "4.2.7", features = ["derive", "cargo"] }
+async-trait = "0.1.74"
 confy = "0.5.1"
 hex = "0.4.3"
 libp2p = { version = "0.53.1", features = ["tokio", "macros", "ping", "identify", "relay", "tcp", "quic", "dns", "noise", "yamux"] }
@@ -17,6 +18,12 @@ tokio = { version = "1.28.1", features = ["sync", "macros", "rt-multi-thread"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["json"] }
 warp = "0.3.6"
+
+# OpenTelemetry
+opentelemetry = "0.20.0"
+opentelemetry-otlp = {version = "0.13.0", features = ["grpc-tonic", "metrics"]}
+opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
+opentelemetry_sdk = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
 
 [profile.dev]
 panic = "abort"
